--- a/index.html
+++ b/index.html
@@ -1028,19 +1028,19 @@
                       <tbody class="pt-2">
                         <tr>
                           <th scope="col" class="pb-0 position-relative">
-                            <a data-href="https://www.apteka-melissa.pl/produkt/dulcobis-5-mg-20-tabl,2529.html"><img src="./images/cross-1.webp" alt="Dulcobis 20 tabletek – sposób na zaparcia u dorosłych i dzieci, do kupienia online w aptece internetowej Melissa." class="img-fluid es-cross__image"></a>
+                            <a href="https://www.apteka-melissa.pl/produkt/dulcobis-5-mg-20-tabl,2529.html"><img src="./images/cross-1.webp" alt="Dulcobis 20 tabletek – sposób na zaparcia u dorosłych i dzieci, do kupienia online w aptece internetowej Melissa." class="img-fluid es-cross__image"></a>
                           </th>
                           <th scope="col" class="pb-0">
-                            <a data-href="https://www.apteka-melissa.pl/produkt/dulcobis-5-mg-40-tabl,6061.html"><img src="./images/cross-2.webp" alt="Dulcobis 40 tabletek dojelitowych przeciw zaparciom. Lek dostępny w aptece online Melissa." class="img-fluid es-cross__image"></a>
+                            <a href="https://www.apteka-melissa.pl/produkt/dulcobis-5-mg-40-tabl,6061.html"><img src="./images/cross-2.webp" alt="Dulcobis 40 tabletek dojelitowych przeciw zaparciom. Lek dostępny w aptece online Melissa." class="img-fluid es-cross__image"></a>
                           </th>
                           <th scope="col" class="pb-0">
                             <div class="position-relative">
                               <p class="es-cross__badge es-pulseSlowly">duże opakowanie</p>
-                              <a data-href="https://www.apteka-melissa.pl/produkt/dulcobis-5-mg-60-tabletek,78835.html"><img src="./images/cross-3.webp" alt="Dulcobis 60 tabletek – skuteczny lek na zaparcia dla dorosłych i dzieci do kupienia w aptece Melissa." class="img-fluid es-cross__image"></a>
+                              <a href="https://www.apteka-melissa.pl/produkt/dulcobis-5-mg-60-tabletek,78835.html"><img src="./images/cross-3.webp" alt="Dulcobis 60 tabletek – skuteczny lek na zaparcia dla dorosłych i dzieci do kupienia w aptece Melissa." class="img-fluid es-cross__image"></a>
                             </div>
                           </th>
                           <th scope="col" class="pb-0">
-                            <a data-href="https://www.apteka-melissa.pl/produkt/dulcobis-10-mg-czopki-6-szt,49507.html"><img src="./images/cross-4.webp" alt="Czopki na zatwardzenie Dulcobis 6 szt. do kupienia online w aptece internetowej Melissa." class="img-fluid es-cross__image"></a>
+                            <a href="https://www.apteka-melissa.pl/produkt/dulcobis-10-mg-czopki-6-szt,49507.html"><img src="./images/cross-4.webp" alt="Czopki na zatwardzenie Dulcobis 6 szt. do kupienia online w aptece internetowej Melissa." class="img-fluid es-cross__image"></a>
                           </th>
                         </tr>
                         <tr  class="header-row">
@@ -1073,16 +1073,16 @@
                         </tr>
                         <tr>
                           <td>
-                            <p class="mt-4"><a class="es-articles__button" data-href="https://www.apteka-melissa.pl/produkt/dulcobis-5-mg-20-tabl,2529.html">Sprawdź</a></p>
+                            <p class="mt-4"><a class="es-articles__button" href="https://www.apteka-melissa.pl/produkt/dulcobis-5-mg-20-tabl,2529.html">Sprawdź</a></p>
                           </td>
                           <td>
-                            <p class="mt-4"><a class="es-articles__button" data-href="https://www.apteka-melissa.pl/produkt/dulcobis-5-mg-40-tabl,6061.html">Sprawdź</a></p>
+                            <p class="mt-4"><a class="es-articles__button" href="https://www.apteka-melissa.pl/produkt/dulcobis-5-mg-40-tabl,6061.html">Sprawdź</a></p>
                           </td>
                           <td>
-                            <p class="mt-4"><a class="es-articles__button" data-href="https://www.apteka-melissa.pl/produkt/dulcobis-5-mg-60-tabletek,78835.html">Sprawdź</a></p>
+                            <p class="mt-4"><a class="es-articles__button" href="https://www.apteka-melissa.pl/produkt/dulcobis-5-mg-60-tabletek,78835.html">Sprawdź</a></p>
                           </td>
                           <td>
-                            <p class="mt-4"><a class="es-articles__button" data-href="https://www.apteka-melissa.pl/produkt/dulcobis-10-mg-czopki-6-szt,49507.html">Sprawdź</a></p>
+                            <p class="mt-4"><a class="es-articles__button" href="https://www.apteka-melissa.pl/produkt/dulcobis-10-mg-czopki-6-szt,49507.html">Sprawdź</a></p>
                           </td>
                         </tr>
                       </tbody>
@@ -1096,10 +1096,10 @@
                       <tbody class="pt-2">
                         <tr>
                           <th scope="col" class="pb-0 position-relative">
-                            <a data-href="https://www.apteka-melissa.pl/produkt/dulcosoft-roztwor-doustny-250-ml,32733.html"><img src="./images/cross-5.webp" alt="DulcoSoft, roztwór doustny na zaparcia. Kup DulcoSoft w aptece internetowej Melissa." class="img-fluid es-cross__image"></a>
+                            <a href="https://www.apteka-melissa.pl/produkt/dulcosoft-roztwor-doustny-250-ml,32733.html"><img src="./images/cross-5.webp" alt="DulcoSoft, roztwór doustny na zaparcia. Kup DulcoSoft w aptece internetowej Melissa." class="img-fluid es-cross__image"></a>
                           </th>
                           <th scope="col" class="pb-0">
-                            <a data-href="https://www.apteka-melissa.pl/produkt/dulcosoft-junior-syrop-100-ml,32732.html"><img src="./images/cross-6.webp" alt="Roztwór doustny na zaparcia dla dzieci DulcoSoft Junior. Wyrób medyczny dostępny bez recepty w aptece internetowej Melissa." class="img-fluid es-cross__image"></a>
+                            <a href="https://www.apteka-melissa.pl/produkt/dulcosoft-junior-syrop-100-ml,32732.html"><img src="./images/cross-6.webp" alt="Roztwór doustny na zaparcia dla dzieci DulcoSoft Junior. Wyrób medyczny dostępny bez recepty w aptece internetowej Melissa." class="img-fluid es-cross__image"></a>
                           </th>
                         </tr>
                         <tr  class="header-row">
@@ -1123,10 +1123,10 @@
                         </tr>
                         <tr>
                           <td>
-                            <p class="mt-4"><a class="es-articles__button" data-href="https://www.apteka-melissa.pl/produkt/dulcosoft-roztwor-doustny-250-ml,32733.html">Sprawdź</a></p>
+                            <p class="mt-4"><a class="es-articles__button" href="https://www.apteka-melissa.pl/produkt/dulcosoft-roztwor-doustny-250-ml,32733.html">Sprawdź</a></p>
                           </td>
                           <td>
-                            <p class="mt-4"><a class="es-articles__button" data-href="https://www.apteka-melissa.pl/produkt/dulcosoft-junior-syrop-100-ml,32732.html">Sprawdź</a></p>
+                            <p class="mt-4"><a class="es-articles__button" href="https://www.apteka-melissa.pl/produkt/dulcosoft-junior-syrop-100-ml,32732.html">Sprawdź</a></p>
                           </td>
                         </tr>
                       </tbody>
@@ -1166,17 +1166,17 @@
             <div class="row text-center justify-content-sm-center no-gutters px-3 px-lg-5">
               <div class="col-12 col-sm-10 col-md-6 col-lg-6 col-xl-6 m-auto pt-3">
                 <div class="es-articles__box">
-                  <a data-href="https://www.apteka-melissa.pl/blog/artykul/zaparcia-czesto-lekcewazony-problem-jakie-maja-przyczyny-jak-mozemy-sobie-z-nimi-poradzic,1150.html"><img alt="Oczyszczanie jelit pomaga nie tylko zadbać o układ trawienny, ale również wspiera prawidłowe funkcjonowanie całego organizmu." class="img-fluid rounded pb-3" src="./images/article-1.webp">
+                  <a href="https://www.apteka-melissa.pl/blog/artykul/zaparcia-czesto-lekcewazony-problem-jakie-maja-przyczyny-jak-mozemy-sobie-z-nimi-poradzic,1150.html"><img alt="Oczyszczanie jelit pomaga nie tylko zadbać o układ trawienny, ale również wspiera prawidłowe funkcjonowanie całego organizmu." class="img-fluid rounded pb-3" src="./images/article-1.webp">
                   <h2 class="es-articles__subtitle">Zaparcia - często lekceważony problem. Jakie mają przyczyny, jak&nbsp;możemy sobie z&nbsp;nimi poradzić?</h2></a>
-                  <p class="mt-4"><a class="es-articles__button" data-href="https://www.apteka-melissa.pl/blog/artykul/zaparcia-czesto-lekcewazony-problem-jakie-maja-przyczyny-jak-mozemy-sobie-z-nimi-poradzic,1150.html">Dowiedz się więcej</a></p>
+                  <p class="mt-4"><a class="es-articles__button" href="https://www.apteka-melissa.pl/blog/artykul/zaparcia-czesto-lekcewazony-problem-jakie-maja-przyczyny-jak-mozemy-sobie-z-nimi-poradzic,1150.html">Dowiedz się więcej</a></p>
                 </div>
               </div>
               <div class="col-12 col-sm-10 col-md-6 col-lg-6 col-xl-6 m-auto pt-3">
                 <div class="es-articles__box">
-                  <a data-href="https://www.apteka-melissa.pl/blog/artykul/co-zrobic-aby-zniwelowac-problem-zaparc-i-miec-lepszy-dzien,1263.html"><img alt="Dowiedz się więcej o zaparciach u dorosłych. Skąd się biorą zaparcia oraz jak walczyć z zapraciami." class="img-fluid rounded pb-3" src="./images/article-2.webp">
+                  <a href="https://www.apteka-melissa.pl/blog/artykul/co-zrobic-aby-zniwelowac-problem-zaparc-i-miec-lepszy-dzien,1263.html"><img alt="Dowiedz się więcej o zaparciach u dorosłych. Skąd się biorą zaparcia oraz jak walczyć z zapraciami." class="img-fluid rounded pb-3" src="./images/article-2.webp">
                   <h2 class="es-articles__subtitle">Co zrobić aby&nbsp;zniwelować problem zaparć i&nbsp;mieć lepszy
                     dzień?<br><br></h2></a>
-                  <p class="mt-4"><a class="es-articles__button" data-href="https://www.apteka-melissa.pl/blog/artykul/co-zrobic-aby-zniwelowac-problem-zaparc-i-miec-lepszy-dzien,1263.html">Dowiedz się więcej</a></p>
+                  <p class="mt-4"><a class="es-articles__button" href="https://www.apteka-melissa.pl/blog/artykul/co-zrobic-aby-zniwelowac-problem-zaparc-i-miec-lepszy-dzien,1263.html">Dowiedz się więcej</a></p>
                 </div>
               </div>
             </div>
@@ -1229,14 +1229,6 @@
   </div>
 </body>
 </html>
-<script defer>
-    $(".es-nav__link").click(function() {
-            var idik = $(this).attr('data-href');
-            $('html, body').animate({
-                scrollTop: $(idik).offset().top -110+'px'
-            });
-        });
-</script>
 <script
   src="https://code.jquery.com/jquery-3.6.4.min.js"
   integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
