--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
                 </div>
                 <h3 class="mt-3 es-features__title">Dzień dobry bez zaparcia będzie jeszcze lepszy
                 </h3>
-                <p class="es-features__desc">Poranek jest kluczem do&nbsp;udanego dnia - to, jak go zaczniesz, ma wpływ na jego resztę. Przy zaparciach już od rana rośnie frustracja i spada pewność siebie.<sup>2</sup></p>
+                <p class="es-features__desc">Poranek jest kluczem do&nbsp;udanego dnia - to, jak go zaczniesz, ma wpływ na jego resztę. Przy zaparciach już od rana rośnie frustracja i&nbsp;spada pewność siebie.<sup>2</sup></p>
               </div>
 
               <div class="col-6 col-sm-6 col-md-3 col-lg-3 flex-column justify-content-start es-features__box">
@@ -824,14 +824,14 @@
                   <img alt="Jeśli masz problemy z wypróżnianiem, sięgnij po skuteczny i szybko działający środek na zaparcia Dulcobis 5 mg." class="img-fluid rounded" src="./images/why-1.webp">
                 </div>
                 <h3 class="mt-3 es-features__title">Szybkość działania</h3>
-                <p class="es-features__desc">Szybsza ulga w&nbsp;zaparciach<sup>8</sup> - Dulcobis przynosi ulgę w&nbsp;zaparciach już po 6h.<sup>4</sup></p>
+                <p class="es-features__desc">Szybsza ulga w&nbsp;zaparciach<sup>8</sup> <span class="es-nowrap">- Dulcobis</span> przynosi ulgę w&nbsp;zaparciach już po 6h.<sup>4</sup></p>
               </div>
               <div class="col-6 col-sm-6 col-md-3 col-lg-3 flex-column justify-content-start es-features__box">
                 <div class="es-image-box">
                   <img alt="Tabletki na zatwardzenie Dulcobis wykazują potrójne działanie – stymulują, zmiękczają i przyspieszają wypróżnianie." class="img-fluid rounded" src="./images/why-2.webp">
                 </div>
                 <h3 class="mt-3 es-features__title">Potrójne działanie</h3>
-                <p class="es-features__desc">Dulcobis z potrójnym działaniem. Stymuluje, zmiękcza, przyspiesza. Zastosowany wieczorem przynosi ulgę w zaparciach o poranku.<sup>5</sup></p>
+                <p class="es-features__desc">Dulcobis z potrójnym działaniem. Stymuluje, zmiękcza, przyspiesza. Zastosowany wieczorem przynosi ulgę w zaparciach o&nbsp;poranku.<sup>5</sup></p>
               </div>
               <div class="col-6 col-sm-6 col-md-3 col-lg-3 flex-column justify-content-start es-features__box">
                 <div class="es-image-box">
@@ -845,7 +845,7 @@
                   <img alt="Tabletki Dulcobis są dobrym sposobem na przeczyszczenie. Mogą one być stosowane w krótkotrwałym, objawowym leczeniu zaparć." class="img-fluid rounded" src="./images/why-4.webp">
                 </div>
                 <h3 class="mt-3 es-features__title">Wskazania</h3>
-                <p class="es-features__desc">Krótkotrwałe, objawowe leczenie zaparć. W leczeniu przed i pooperacyjnym. W&nbsp;stanach wymagających ułatwienia defekacji.<sup>6</sup></p>
+                <p class="es-features__desc">Krótkotrwałe, objawowe leczenie zaparć. W leczeniu przed i&nbsp;pooperacyjnym. W&nbsp;stanach wymagających ułatwienia defekacji.<sup>6</sup></p>
               </div>
             </div>
           </div>
@@ -944,7 +944,7 @@
                       <div class="d-flex align-items-center justify-content-center py-3">
                         <p class="es-dose__subtitleInBox">Substancje pomocnicze:<br></p>
                       </div>
-                      <p class="es-dose__text pb-3">laktoza 33,2 mg,<br>
+                      <p class="es-dose__text pb-1">laktoza 33,2 mg,<br>
                         sacharoza 23,4 mg.<sup>6</sup></p>
                   <!--end-->
                 </div>
