--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
                   
                 </div>       
                  <p class="text-center pt-3 px-lg-2 es-dose__textUnderBox">
-                    *Dzieci w wieku 10 lat i młodsze z przewlekłymi lub uporczywymi zaparciami powinny być leczone wyłącznie pod opieką lekarza.
+                    *Dzieci w wieku 10 lat i młodsze z&nbsp;przewlekłymi lub uporczywymi zaparciami powinny być leczone wyłącznie pod opieką lekarza.
                   </p>        
               </div>
               <div class="col-12 col-sm-12 col-md-10 col-lg-6 col-xl-6 m-0 px-lg-3">
