--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
                   <img alt="Lek na zaparcia Dulcobis działa w harmonii z ciałem – poranne wypróżnianie jest zsynchronizowane z zegarem biologicznym." class="img-fluid rounded" src="./images/feature-3.webp">
                 </div>
                 <h3 class="mt-3 es-features__title">Działa w&nbsp;harmonii z&nbsp;Twoim ciałem</h3>
-                <p class="es-features__desc">Poranna ulga jest zsynchronizowana z&nbsp;zegarem biologcznym.<sup>12</sup>
+                <p class="es-features__desc">Poranna ulga jest zsynchronizowana z&nbsp;zegarem biologicznym.<sup>12</sup>
                 </p>
               </div>
 
@@ -795,7 +795,7 @@
                       czy podróże.
                     </li>
                   </ul>
-                  <p class="es-description__text1">Zaparcia mogą również towarzyszyć chorobom przewklekłym, nawet
+                  <p class="es-description__text1">Zaparcia mogą również towarzyszyć chorobom przewlekłym, nawet
                     tym&nbsp;niezwiązanym z&nbsp;układem pokarmowym. Zaparciom często towarzyszą objawy takie&nbsp;jak:
                     bóle brzucha, wzdęcia, brak apetytu, uczucie pełności i&nbsp;zblokowania.<sup>7,13</sup></p>
                 </div>
