Add label and additional description image in kv section

--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
         padding: 0;
         overflow: hidden;
       }
+      #es-rc #es-rc-content .es-kv__pills {
+        top: 75%;
+        left: 55%;
+        width: 40%;
+      }
       #es-rc #es-rc-content .es-mobile-break {
         display: block;
       }
@@ -148,6 +153,10 @@
       @media (min-width: 576px) {
         #es-rc #es-rc-content .es-kv__mobile {
           display: none;
+        }
+        #es-rc #es-rc-content .es-kv__pills {
+        top: 65%;
+        left: 55%;
         }
       }
       #es-rc #es-rc-content .es-kv__desktop {
@@ -693,10 +702,11 @@
 
 
         <!-- Contents 25 -->
-        <section class="fdb-block es-kv">
+        <section class="fdb-block position-relative es-kv">
           <div class="container  es-kv__container position-relative">
-            <img class="img-fluid w-100 es-kv__mobile" src="./images/es-kv--mobile.webp" alt="Szukasz skutecznych środków na przeczyszczenie lub leków na zaparcia bez recepty?">
-            <img class="img-fluid w-100 es-kv__desktop" src="./images/es-kv--desktop.webp" alt="Wybierz lek na zatwardzenie bez recepty Dulcobis 5 mg dostępny w aptece Melissa. ">
+            <img class="img-fluid w-100 es-kv__mobile" src="./images/es-kv-mobile.webp" alt="Szukasz skutecznych środków na przeczyszczenie lub leków na zaparcia bez recepty?">
+            <img class="img-fluid w-100 es-kv__desktop" src="./images/es-kv-desktop.webp" alt="Wybierz lek na zatwardzenie bez recepty Dulcobis 5 mg dostępny w aptece Melissa. ">
+            <img class="img-fluid position-absolute es-kv__pills" src="./images/60-pills.webp" alt="60 tabletek to 60 razy dzień dobry">
 
             <div class="es-kv__packshotCtn">
               <!-- <img src="./images/kv-packshot.webp" alt="" class="es-kv__packshot"> -->
