--- a/index.html
+++ b/index.html
@@ -109,11 +109,6 @@
         padding: 0;
         overflow: hidden;
       }
-      #es-rc #es-rc-content .es-kv__pills {
-        top: 75%;
-        left: 55%;
-        width: 40%;
-      }
       #es-rc #es-rc-content .es-mobile-break {
         display: block;
       }
@@ -153,10 +148,6 @@
       @media (min-width: 576px) {
         #es-rc #es-rc-content .es-kv__mobile {
           display: none;
-        }
-        #es-rc #es-rc-content .es-kv__pills {
-        top: 65%;
-        left: 55%;
         }
       }
       #es-rc #es-rc-content .es-kv__desktop {
@@ -702,11 +693,10 @@
 
 
         <!-- Contents 25 -->
-        <section class="fdb-block position-relative es-kv">
+        <section class="fdb-block es-kv">
           <div class="container  es-kv__container position-relative">
-            <img class="img-fluid w-100 es-kv__mobile" src="./images/es-kv-mobile.webp" alt="Szukasz skutecznych środków na przeczyszczenie lub leków na zaparcia bez recepty?">
-            <img class="img-fluid w-100 es-kv__desktop" src="./images/es-kv-desktop.webp" alt="Wybierz lek na zatwardzenie bez recepty Dulcobis 5 mg dostępny w aptece Melissa. ">
-            <img class="img-fluid position-absolute es-kv__pills" src="./images/60-pills.webp" alt="60 tabletek to 60 razy dzień dobry">
+            <img class="img-fluid w-100 es-kv__mobile" src="./images/es-kv--mobile.webp" alt="Szukasz skutecznych środków na przeczyszczenie lub leków na zaparcia bez recepty?">
+            <img class="img-fluid w-100 es-kv__desktop" src="./images/es-kv--desktop.webp" alt="Wybierz lek na zatwardzenie bez recepty Dulcobis 5 mg dostępny w aptece Melissa. ">
 
             <div class="es-kv__packshotCtn">
               <!-- <img src="./images/kv-packshot.webp" alt="" class="es-kv__packshot"> -->
@@ -745,7 +735,7 @@
                   <img alt="Lek na zaparcia Dulcobis działa w harmonii z ciałem – poranne wypróżnianie jest zsynchronizowane z zegarem biologicznym." class="img-fluid rounded" src="./images/feature-3.webp">
                 </div>
                 <h3 class="mt-3 es-features__title">Działa w&nbsp;harmonii z&nbsp;Twoim ciałem</h3>
-                <p class="es-features__desc">Poranna ulga jest zsynchronizowana z&nbsp;zegarem biologicznym.<sup>12</sup>
+                <p class="es-features__desc">Poranna ulga jest zsynchronizowana z&nbsp;zegarem biologcznym.<sup>12</sup>
                 </p>
               </div>
 
@@ -805,7 +795,7 @@
                       czy podróże.
                     </li>
                   </ul>
-                  <p class="es-description__text1">Zaparcia mogą również towarzyszyć chorobom przewlekłym, nawet
+                  <p class="es-description__text1">Zaparcia mogą również towarzyszyć chorobom przewklekłym, nawet
                     tym&nbsp;niezwiązanym z&nbsp;układem pokarmowym. Zaparciom często towarzyszą objawy takie&nbsp;jak:
                     bóle brzucha, wzdęcia, brak apetytu, uczucie pełności i&nbsp;zblokowania.<sup>7,13</sup></p>
                 </div>
