--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
         color: #000;
         max-width: 210px;
         padding-top: 12px;
+        line-height: 1.2;
       }
       #es-rc #es-rc-content .es-description {
         background: rgb(4, 94, 72);
@@ -255,6 +256,7 @@
         color: #fff;
         width: 95%;
         margin: auto;
+        line-height: 1.2;
       }
       #es-rc #es-rc-content .es-description__subtitle {
         color: #fff;
@@ -278,6 +280,7 @@
         color: #a1bd39;
         font-weight: 700;
         padding-top: 5px;
+        line-height: 1.2;
       }
       #es-rc #es-rc-content .es-description__bullet {
         margin-right: 5px;
@@ -385,6 +388,8 @@
       #es-rc #es-rc-content .es-dose__text {
         color: #000;
         text-align: center;
+        line-height: 1.2;
+        font-size: clamp(12px, 9.722px + 0.6329vw, 16px) !important;
       }
       #es-rc #es-rc-content .es-dose__subtitleInBox {
         font-weight: 700;
@@ -392,8 +397,10 @@
         margin-bottom: 0;
         text-align: center;
         color: #fff;
+        line-height: 1.2;
       }
       #es-rc #es-rc-content .es-dose__textUnderBox {
+        line-height: 1.2;
         font-size: clamp(12px, 9.722px + 0.6329vw, 16px);
         color: #fff;
       }
@@ -498,6 +505,7 @@
         text-transform: uppercase;
         font-size: 14px;
         font-weight: 500;
+        line-height: 1.2;
       }
       #es-rc #es-rc-content .es-cross__head {
         font-size: calc(1.67 * clamp(12px, 9.722px + 0.6329vw, 16px));
@@ -523,6 +531,7 @@
       #es-rc #es-rc-content .es-cross table {
         padding: 0;
         margin: 0;
+        border: none !important;
         border-color: transparent;
         font-size: clamp(12px, 9.722px + 0.6329vw, 16px);
       }
@@ -603,11 +612,13 @@
         color: #00604d;
         text-transform: uppercase;
         margin-bottom: 0;
+        line-height: 1.2;
       }
       #es-rc #es-rc-content .es-articles__text1 {
         font-size: clamp(12px, 9.722px + 0.6329vw, 16px);
         color: #005649;
         margin-bottom: 0;
+        line-height: 1.2;
       }
       /*@media (min-width: 992px) {
         #es-rc #es-rc-content .es-articles__text1 {
@@ -735,7 +746,7 @@
                   <img alt="Lek na zaparcia Dulcobis działa w harmonii z ciałem – poranne wypróżnianie jest zsynchronizowane z zegarem biologicznym." class="img-fluid rounded" src="./images/feature-3.webp">
                 </div>
                 <h3 class="mt-3 es-features__title">Działa w&nbsp;harmonii z&nbsp;Twoim ciałem</h3>
-                <p class="es-features__desc">Poranna ulga jest zsynchronizowana z&nbsp;zegarem biologcznym.<sup>12</sup>
+                <p class="es-features__desc">Poranna ulga jest zsynchronizowana z&nbsp;zegarem biologicznym.<sup>12</sup>
                 </p>
               </div>
 
@@ -795,7 +806,7 @@
                       czy podróże.
                     </li>
                   </ul>
-                  <p class="es-description__text1">Zaparcia mogą również towarzyszyć chorobom przewklekłym, nawet
+                  <p class="es-description__text1">Zaparcia mogą również towarzyszyć chorobom przewlekłym, nawet
                     tym&nbsp;niezwiązanym z&nbsp;układem pokarmowym. Zaparciom często towarzyszą objawy takie&nbsp;jak:
                     bóle brzucha, wzdęcia, brak apetytu, uczucie pełności i&nbsp;zblokowania.<sup>7,13</sup></p>
                 </div>
