--- a/index.html
+++ b/index.html
@@ -241,7 +241,6 @@
         color: #000;
         max-width: 210px;
         padding-top: 12px;
-        line-height: 1.2;
       }
       #es-rc #es-rc-content .es-description {
         background: rgb(4, 94, 72);
@@ -256,7 +255,6 @@
         color: #fff;
         width: 95%;
         margin: auto;
-        line-height: 1.2;
       }
       #es-rc #es-rc-content .es-description__subtitle {
         color: #fff;
@@ -280,7 +278,6 @@
         color: #a1bd39;
         font-weight: 700;
         padding-top: 5px;
-        line-height: 1.2;
       }
       #es-rc #es-rc-content .es-description__bullet {
         margin-right: 5px;
@@ -388,8 +385,6 @@
       #es-rc #es-rc-content .es-dose__text {
         color: #000;
         text-align: center;
-        line-height: 1.2;
-        font-size: clamp(12px, 9.722px + 0.6329vw, 16px) !important;
       }
       #es-rc #es-rc-content .es-dose__subtitleInBox {
         font-weight: 700;
@@ -397,10 +392,8 @@
         margin-bottom: 0;
         text-align: center;
         color: #fff;
-        line-height: 1.2;
       }
       #es-rc #es-rc-content .es-dose__textUnderBox {
-        line-height: 1.2;
         font-size: clamp(12px, 9.722px + 0.6329vw, 16px);
         color: #fff;
       }
@@ -505,7 +498,6 @@
         text-transform: uppercase;
         font-size: 14px;
         font-weight: 500;
-        line-height: 1.2;
       }
       #es-rc #es-rc-content .es-cross__head {
         font-size: calc(1.67 * clamp(12px, 9.722px + 0.6329vw, 16px));
@@ -531,7 +523,6 @@
       #es-rc #es-rc-content .es-cross table {
         padding: 0;
         margin: 0;
-        border: none !important;
         border-color: transparent;
         font-size: clamp(12px, 9.722px + 0.6329vw, 16px);
       }
@@ -612,13 +603,11 @@
         color: #00604d;
         text-transform: uppercase;
         margin-bottom: 0;
-        line-height: 1.2;
       }
       #es-rc #es-rc-content .es-articles__text1 {
         font-size: clamp(12px, 9.722px + 0.6329vw, 16px);
         color: #005649;
         margin-bottom: 0;
-        line-height: 1.2;
       }
       /*@media (min-width: 992px) {
         #es-rc #es-rc-content .es-articles__text1 {
@@ -746,7 +735,7 @@
                   <img alt="Lek na zaparcia Dulcobis działa w harmonii z ciałem – poranne wypróżnianie jest zsynchronizowane z zegarem biologicznym." class="img-fluid rounded" src="./images/feature-3.webp">
                 </div>
                 <h3 class="mt-3 es-features__title">Działa w&nbsp;harmonii z&nbsp;Twoim ciałem</h3>
-                <p class="es-features__desc">Poranna ulga jest zsynchronizowana z&nbsp;zegarem biologicznym.<sup>12</sup>
+                <p class="es-features__desc">Poranna ulga jest zsynchronizowana z&nbsp;zegarem biologcznym.<sup>12</sup>
                 </p>
               </div>
 
@@ -806,7 +795,7 @@
                       czy podróże.
                     </li>
                   </ul>
-                  <p class="es-description__text1">Zaparcia mogą również towarzyszyć chorobom przewlekłym, nawet
+                  <p class="es-description__text1">Zaparcia mogą również towarzyszyć chorobom przewklekłym, nawet
                     tym&nbsp;niezwiązanym z&nbsp;układem pokarmowym. Zaparciom często towarzyszą objawy takie&nbsp;jak:
                     bóle brzucha, wzdęcia, brak apetytu, uczucie pełności i&nbsp;zblokowania.<sup>7,13</sup></p>
                 </div>
